package fightinggame.game;

public class Projectile extends WorldEntity{
    
}
