package fightinggame.game;

public class Terrain extends WorldEntity{
    
}
