package fightinggame.game;

public class Vector {
    
}
